--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,11 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    @apply bg-zinc-300;
+    background-image: url('./assest/bg8.jpg'); /* Replace with your image path */
+    background-size: cover; /* Adjust as needed: cover, contain, etc. */
+    background-position: center; /* Adjust as needed: center, top, bottom, etc. */
+    background-repeat: no-repeat; 
 }
